monitoring/grafana/instance/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      deployment: grafana
  template:
    metadata:
      labels:
        deployment: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - mountPath: /etc/grafana
              name: grafana-config
            - mountPath: /etc/grafana/provisioning
              name: grafana-provisioning
            - mountPath: /etc/grafana/dashboards
              name: grafana-dashboards
      serviceAccountName: grafana
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: grafana-provisioning
          configMap:
            name: grafana-provisioning
            items:
              - key: dashboards.yaml
                path: dashboards/dashboards.yaml
              - key: datasources.yaml
                path: datasources/datasources.yaml
        - name: grafana-dashboards
          configMap:
            name: grafana-dashboards
