monitoring/grafana/instance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-grafana
      name: http-grafana
  selector:
    deployment: grafana
